--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@babel/preset-env": "^7.3.1",
     "babel-loader": "^8.0.5",
     "css-loader": "^5.2.6",
-    "dotenv": "^10.0.0",
+    "dotenv-webpack": "^7.0.3",
     "html-webpack-plugin": "^4.5.2",
     "style-loader": "^2.0.0",
     "webpack": "^4.46.0",
