--- a/package.json
+++ b/package.json
@@ -24,10 +24,14 @@
     "babel-loader": "^8.0.5",
     "css-loader": "^5.2.6",
     "dotenv-webpack": "^7.0.3",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.5.2",
     "style-loader": "^2.0.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2"
+  },
+  "dependencies": {
+    "copy-webpack-plugin": "^6.4.1"
   }
 }
