--- a/.gitignore
+++ b/.gitignore
@@ -83,7 +83,6 @@ typings/
 
 # Nuxt.js build / generate output
 .nuxt
-dist
 
 # Gatsby files
 .cache/
@@ -92,6 +91,7 @@ dist
 # public
 
 # vuepress build output
+dist/
 .vuepress/dist
 
 # Serverless directories
